@@ -12,18 +12,16 @@ define( function( require ) {
   var toSubscript = require( 'NITROGLYCERIN/ChemUtils' ).toSubscript;
   var MStrings = require( 'molarity/MStrings' );
 
-  function MSymbols() {}
-
-  MSymbols.COBALT_II_NITRATE = toSubscript( 'Co(NO3)2' );
-  MSymbols.COBALT_CHLORIDE = toSubscript( 'CoCl2' );
-  MSymbols.COPPER_SULFATE = toSubscript( 'CuSO4' );
-  MSymbols.DRINK_MIX = MStrings.drinkMix;
-  MSymbols.GOLD_III_CHLORIDE = toSubscript( 'AuCl3' );
-  MSymbols.NICKEL_II_CHLORIDE = toSubscript( 'NiCl2' );
-  MSymbols.POTASSIUM_CHROMATE = toSubscript( 'K2CrO4' );
-  MSymbols.POTASSIUM_DICHROMATE = toSubscript( 'K2Cr2O7' );
-  MSymbols.POTASSIUM_PERMANGANATE = toSubscript( 'KMnO4' );
-  MSymbols.WATER = toSubscript( 'H2O' );
-
-  return MSymbols;
+  return {
+    COBALT_II_NITRATE: toSubscript( 'Co(NO3)2' ),
+    COBALT_CHLORIDE: toSubscript( 'CoCl2' ),
+    COPPER_SULFATE: toSubscript( 'CuSO4' ),
+    DRINK_MIX: MStrings.drinkMix,
+    GOLD_III_CHLORIDE: toSubscript( 'AuCl3' ),
+    NICKEL_II_CHLORIDE: toSubscript( 'NiCl2' ),
+    POTASSIUM_CHROMATE: toSubscript( 'K2CrO4' ),
+    POTASSIUM_DICHROMATE: toSubscript( 'K2Cr2O7' ),
+    POTASSIUM_PERMANGANATE: toSubscript( 'KMnO4' ),
+    WATER: toSubscript( 'H2O' )
+  };
 } );
