@@ -1,3 +1,4 @@
+7/11/13 make MSymbols return an object literal
 7/11/13 change double quotes (") to single quotes (') throughout
 6/27/13 update copyright
 6/24/13 add credits
